--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,15 @@ project(':tracker') {
     }
 }
 
+project(':common') {
+    dependencies {
+        // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.7'
+
+        // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.7'
+    }
+}
+
 
 
