--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,11 @@ project(':common') {
     dependencies {
         // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.7'
-
         // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.7'
+        // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.7'
+
     }
 }
 
