Client and tracker can now be run

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,5 +1,15 @@
 group 'root'
 version '1.0-SNAPSHOT'
 
+apply plugin: 'application'
 
+mainClassName = 'Client'
+
+jar {
+    baseName = 'client'
+}
+
+run {
+    standardInput = System.in
+}
 
